@@ -159,12 +159,11 @@ void * GC_generic_malloc(size_t lb, int k)
         result = GC_generic_malloc_inner((word)lb, k);
 	UNLOCK();
     } else {
-	size_t lg, lw;
+	size_t lg;
 	size_t lb_rounded;
 	word n_blocks;
 	GC_bool init;
 	lg = ROUNDED_UP_GRANULES(lb);
-	lw = GRANULES_TO_WORDS(lg);
 	lb_rounded = GRANULES_TO_BYTES(lg);
 	n_blocks = OBJ_SZ_TO_BLOCKS(lb_rounded);
 	init = GC_obj_kinds[k].ok_init;
@@ -179,8 +178,8 @@ void * GC_generic_malloc(size_t lb, int k)
 	      /* before we release the lock.			      */
 	        ((word *)result)[0] = 0;
 	        ((word *)result)[1] = 0;
-	        ((word *)result)[lw-1] = 0;
-	        ((word *)result)[lw-2] = 0;
+	        ((word *)result)[GRANULES_TO_WORDS(lg)-1] = 0;
+	        ((word *)result)[GRANULES_TO_WORDS(lg)-2] = 0;
 #	    endif
 	  }
 	}
