@@ -167,7 +167,7 @@ void * realloc(void * p, size_t lb)
 void * GC_generic_malloc_ignore_off_page(size_t lb, int k)
 {
     void *result;
-    size_t lg, lw;
+    size_t lg;
     size_t lb_rounded;
     word n_blocks;
     GC_bool init;
@@ -176,7 +176,6 @@ void * GC_generic_malloc_ignore_off_page(size_t lb, int k)
     if (SMALL_OBJ(lb))
         return(GC_generic_malloc((word)lb, k));
     lg = ROUNDED_UP_GRANULES(lb);
-    lw = GRANULES_TO_WORDS(lg);
     lb_rounded = GRANULES_TO_BYTES(lg);
     n_blocks = OBJ_SZ_TO_BLOCKS(lb_rounded);
     init = GC_obj_kinds[k].ok_init;
@@ -193,8 +192,8 @@ void * GC_generic_malloc_ignore_off_page(size_t lb, int k)
 	      /* before we release the lock.			      */
 	        ((word *)result)[0] = 0;
 	        ((word *)result)[1] = 0;
-	        ((word *)result)[lw-1] = 0;
-	        ((word *)result)[lw-2] = 0;
+	        ((word *)result)[GRANULES_TO_WORDS(lg)-1] = 0;
+	        ((word *)result)[GRANULES_TO_WORDS(lg)-2] = 0;
 #	    endif
         }
     }
